# c

./: CMakeLists.txt  README.md
inc/: bch.h  field.h  template.h
src/: golay_24_12_8.c
src/bch/: bch.c  bch_15_11_3.c
src/common/: field.c
src/golay/: README.md  golay_24_12_8.c
test/: test_bch.c  test_field.c  test_overall.c  test_rand.c
